# scmgen

./: .gitignore  .gitmodules  README.md
scmaudio/: CMakeLists.txt  utils.cmake
scmaudio/scmaudio/: CMakeLists.txt  scmaudio.swig
scmaudio/scmaudio/src/: asyncresult.h  audiobuffer.cpp  audiobuffer.h  audiodevice.h  audioengine.cpp  audioengine.h  audiofft.cpp  audiofft.h  audioutils.h  configuration.h  constants.h  defines.h  error.h  fftmanager.cpp  fftmanager.h  fftstagingbuffer.cpp  fftstagingbuffer.h  fftwutils.h  lockfreeobjectpool.h  logger.cpp  logger.h  notefftinfo.cpp  notefftinfo.h  objectpool.h  result.h  rtaudiohelper.h  sampleanalyzer.cpp  sampleanalyzer.h  scmaudiocallback.cpp  scmaudiocallback.h  session.cpp  session.h  snapshotdata.h  sound.cpp  sound.h  soundinstance.cpp  soundinstance.h  soundmanager.cpp  soundmanager.h  soundplayer.cpp  (+5 more)
scmaudio/tests/: CMakeLists.txt  audioenginetests.cpp  fftprecisiontest.cpp  main.cpp  noteprecisiontest.cpp  tests.cpp  testutils.h
scmaudio/tests/gtest/include/gtest/internal/: gtest-internal.h
